# picolibc

./: CMakeLists.txt  picolibc.h.in
newlib/libc/: CMakeLists.txt
newlib/libc/ctype/: CMakeLists.txt
newlib/libc/errno/: CMakeLists.txt
newlib/libc/signal/: CMakeLists.txt
newlib/libc/ssp/: CMakeLists.txt
newlib/libc/stdlib/: CMakeLists.txt
newlib/libc/string/: CMakeLists.txt
newlib/libc/tinystdio/: CMakeLists.txt
zephyr/: CMakeLists.txt  Kconfig  libc-hooks.c
